[package]
name = "path-length-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "wgpu",
    "tokio",
    "sipper",
    "svg",
] }
open = "5.3.2"
rfd = { version = "0.13", features = [
    "tokio",
    "xdg-portal",
], default-features = false }
tokio = { version = "1.46.1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
