[package]
name = "path-length-checker"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "wgpu",
    "tokio",
    "sipper",
    "svg",
] }
open = "5.3.2"
rfd = { version = "0.15", features = [
    "tokio",
    "xdg-portal",
], default-features = false }
tokio = { version = "1.47.1", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
